@@ -82,7 +82,14 @@ public:
   //@}
 
   /// returns the type name of the ViewProvider
-  virtual const char* getViewProviderName(void){return "MeshGui::ViewProviderMesh";}
+  virtual const char* getViewProviderName(void){
+    //FIXME: Until the implementation of 'ViewProviderMeshNode' is not completed we
+    //still use 'ViewProviderMesh' for meshes with less than 100.000 triangles.
+    if ( Mesh.getValue().CountFacets() > 100000 )
+      return "MeshGui::ViewProviderMeshNode";
+    else
+      return "MeshGui::ViewProviderMesh";
+  }
 
   /// handles the MeshPy object
   virtual Base::PyObjectBase* GetPyObject(void);
